<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <EditText
                android:id="@+id/profile_edit_first_name"
                style="@style/AccountEditTextStyle"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/profile_edit_last_name"
                style="@style/AccountEditTextStyle"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/profile_edit_email_address"
                style="@style/AccountEditTextStyle"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/profile_edit_address"
                style="@style/AccountEditTextStyle"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:lines="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerVertical"
                android:dividerPadding="5dp"
                android:orientation="horizontal"
                android:showDividers="middle" >

                <EditText
                    android:id="@+id/profile_edit_city"
                    style="@style/AccountEditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_edit_state"
                    style="@style/AccountEditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerVertical"
                android:dividerPadding="5dp"
                android:orientation="horizontal"
                android:showDividers="middle" >

                <EditText
                    android:id="@+id/profile_edit_zipcode"
                    style="@style/AccountEditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/zipcode"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_edit_country"
                    style="@style/AccountEditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/country"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <EditText
                android:id="@+id/profile_edit_phone"
                style="@style/AccountEditTextStyle"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true" />

            <Button
                android:id="@+id/profile_edit_change_password"
                style="@style/ClickableTransparentButton"
                android:drawableLeft="@drawable/ic_action_password"
                android:gravity="center_vertical|left"
                android:text="@string/change_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@drawable/slider_bg" >

                <EditText
                    android:id="@+id/profile_edit_password"
                    style="@style/AccountEditTextStyle"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_edit_confirm_password"
                    style="@style/AccountEditTextStyle"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/shape_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <Button
            android:id="@+id/profile_edit_cancel"
            style="@style/ClickableTransparentButton"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/profile_edit_save"
            style="@style/ClickableTransparentButton"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_action_save"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>