<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_cart"/>
    
    <item
        android:id="@+id/menu_main_cart"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_checkout"
        android:title="@string/menu_cart"/>
    
    <item
        android:id="@+id/menu_my_account"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_my_account"
        android:showAsAction="never"
        android:title="@string/menu_my_account"/>

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>