<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <com.touchmenotapps.mobicart.widgets.TouchHighlightImageButton
        android:id="@+id/detials_header_image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="center"
        android:src="@drawable/ic_loading" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/shape_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle" 
        android:layout_marginTop="-7dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/details_title_text"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/details_vendor_text"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:text="@string/app_name"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/details_purchase_btn"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/remove_cart_item"
            android:src="@drawable/ic_action_add_to_cart" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/shape_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle" 
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        
        <TextView
	        android:id="@+id/details_price_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:fontFamily="sans-serif-condensed"
	        android:gravity="left"
	        android:paddingRight="3dp"
	        android:singleLine="true"
	        android:textColor="@android:color/holo_blue_dark"
	        android:layout_weight="1"
	        android:textSize="18sp" />
        
	    <TextView
	        android:id="@+id/details_available_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:fontFamily="sans-serif-condensed"
	        android:background="@android:color/holo_red_dark"
	        android:gravity="center"
	        android:text="@string/out_of_stock"
	        android:textColor="@android:color/white"
	        android:layout_weight="2"
	        android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" >

        <TextView
            android:id="@+id/details_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp" />
    </ScrollView>

</LinearLayout>